# Gitui

./: Cargo.toml  LICENSE.txt  README.md  test.sh
.github/workflows/: publish.yml  release.yml
src/: app.rs  git.rs  input.rs  main.rs  ui.rs  ui_branches.rs  ui_files.rs  ui_history.rs
